# BFEC

./: .gitignore  BuildRelease.bat  CMakeLists.txt  README.md  vcpkg.json
cmake/: XSEPlugin.cmake
src/: EquipManager.cpp  EquipManager.h  Hooks.cpp  Hooks.h  MessageBox.h  Messagebox.cpp  PCH.h  Papyrus.h  Util.h  XSEPlugin.cpp
